--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "taskmanager",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "express-handlebars": "^4.0.3",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.6",
-    "sqlite": "^4.0.7"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
-  }
+    "name": "taskmanager",
+    "version": "1.0.0",
+    "description": "To manage task and notes",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "author": "Shivam Kamboj",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.1.0",
+        "sequelize": "^5.21.6",
+        "sqlite": "^4.0.7",
+        "sqlite3": "^4.1.1"
+    },
+    "devDependencies": {}
 }
