--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "taskmanager",
     "version": "1.0.0",
     "description": "To manage task and notes",
-    "main": "app.js",
+    "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
+        "start": "node serverside/server.js"
     },
     "author": "Shivam Kamboj",
     "license": "ISC",
@@ -14,8 +14,7 @@
         "mysql": "^2.18.1",
         "mysql2": "^2.1.0",
         "sequelize": "^5.21.6",
-        "sqlite": "^4.0.7",
-        "sqlite3": "^4.1.1"
+        "sqlite": "^4.0.7"
     },
     "devDependencies": {}
 }
