--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "sequelize": "^5.21.6",
         "sqlite": "^4.0.7"
     },
+    "engines": {
+        "node": "12.x"
+    },
     "devDependencies": {}
 }
